# Multimodal-AUV

./: # run_installed_package_tests.py.txt  .gitattributes  .gitignore  LICENSE  Multimodal_AUV.sln  README - pypi.md  README.md  Untitled Document 1  cli working  config.yaml  huggingface_upload.py  model_definitions.py  pyproject.toml  reqirements.txt  run_installed_package_tests.py
Multimodal_AUV/: Multimodal_AUV.pyproj  Multimodal_AUV.sln  main.py
Multimodal_AUV/Examples/: Example_Inference_model.py  Example_Retraining_model.py  Example_data_preparation.py  Example_training_from_scratch.py
Multimodal_AUV/Multimodal_AUV/: Multimodal_AUV.pyproj  main.py
Multimodal_AUV/Multimodal_AUV/config/: paths.py
Multimodal_AUV/Multimodal_AUV/data/: datasets.py  loaders.py
Multimodal_AUV/Multimodal_AUV/inference/: inference_data.py  predictors.py
Multimodal_AUV/Multimodal_AUV/models/: base_models.py  model_utils.py
Multimodal_AUV/Multimodal_AUV/train/: checkpointing.py  loop_utils.py  multimodal.py  unimodal.py
Multimodal_AUV/config/: paths.py
Multimodal_AUV/data/: datasets.py
Multimodal_AUV/data_preparation/: geospatial.py  image_processing.py
Multimodal_AUV/data_preperation/: main_data_preparation.py  sonar_cutting.py
Multimodal_AUV/functions/: __init__.py
Multimodal_AUV/inference/: predictors.py
Multimodal_AUV/models/: base_models.py  model_utils.py
Multimodal_AUV/tests/: test_data.py  test_model.py  test_utils.py
Multimodal_AUV/train/: checkpointing.py  loop_utils.py  multimodal.py  unimodal.py
Multimodal_AUV/utils/: device.py
models/: bayesian_model_typebathy.pth  bayesian_model_typeimage.pth  bayesian_model_typemultimodal_channel_patchcpatch_sss_patchspatch.pth  bayesian_model_typesss.pth
src/Multimodal_AUV/: __init__.py  cli.py  main.py
src/Multimodal_AUV/Examples/: Example training with image noise.py  Example training with image noise_safe.py  Example unimodal training with image noise.py  Example_Inference_model.py  Example_Retraining_model.py  Example_data_preparation.py
src/Multimodal_AUV/data/: loaders.py
src/Multimodal_AUV/data_preparation/: GAVIA_auv_image_processing.py  geospatial.py  main_data_preparation.py  utilities.py
src/Multimodal_AUV/functions/: __init__.py  functions.py
src/Multimodal_AUV/inference/: inference_data.py
src/Multimodal_AUV/models/: model_utils.py
src/Multimodal_AUV/train/: loop_utils.py  multimodal.py  unimodal.py
src/Multimodal_AUV/utils/: device.py
tests/: test_data.py  test_model.py  test_train.py  test_utils.py
unittests/: test_data.py  test_model.py  test_utils.py
