[tool.poetry]
# 1. Basic Package Information
name = "multimodal-auv" 
version = "0.0.4"     
description = "Multimodal AUV Bayesian Neural Networks for Underwater Environmental Understanding" 
authors = ["Tom Morgan <phd01tm@sams.ac.uk>"]
license = "MIT"        # Use an SPDX identifier (e.g., "MIT", "Apache-2.0", "GPL-3.0-only"). Make sure you have a LICENSE file in your root.
readme = "README - pypi.md"   # Path to your project's README file

# 2. Project Links
repository = "https://github.com/sams-tom/Multimodal-AUV" 
homepage = "https://github.com/sams-tom/Multimodal-AUV"   
documentation = "https://github.com/sams-tom/Multimodal-AUV/blob/master/README.md" 
keywords = ["AUV", "Bayesian Neural Networks", "Underwater Mapping", "Habitat Classification", "Multimodal Data", "Oceanography", "geospatial-data", "environmental-monitoring", "uncertainty-quantification", "computer-vision", "remote-sensing"]

# 3. CRUCIAL for the 'src/' layout: Tell Poetry where to find your actual package code
# This tells Poetry: "Include the folder 'Multimodal_AUV' which is located inside 'src/'"
packages = [{include = "Multimodal_AUV", from = "src"}]

# 4. Classifiers (Help users find your package on PyPI and categorize it)
classifiers = [
    "Programming Language :: Python :: 3.9", # Adjust based on your actual supported Python versions
    "License :: OSI Approved :: MIT License", # Matches your chosen license
    "Operating System :: OS Independent",     # If your code runs on Windows, Linux, macOS
    "Development Status :: 4 - Beta",        
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Oceanography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
# 5. Core Runtime Dependencies
# These are packages your project needs to *run*.
python = ">=3.9,<3.10"# Your minimum and maximum compatible Python versions

# Core Runtime Dependencies from your requirements.txt
absl-py = "^2.1.0" # If you directly use absl-py (often via TensorFlow/TensorBoard)
affine = "^2.3.0"
bayesian-torch = "^0.5.0"
click = "^8.1.8" # Only if you explicitly use click outside of Poetry's script features
fsspec = "^2024.6.1"
huggingface_hub = "^0.31.2"
imageio = "^2.37.0"
joblib = "^1.4.2"
matplotlib = "^3.9.2"
numpy = "1.26.4"
opencv-python = "^4.11.0.86"
pandas = "^2.2.3"
pillow = "^11.0.0"
pyproj = "^3.6.1"
rasterio = "^1.4.3"
requests = "^2.32.4"
scikit-image = "^0.24.0"
scikit-learn = "1.6.1"
scipy = "1.13.1"
# Add torch here, as it's a critical dependency for Bayesian-Torch and likely your models
# Check PyTorch's compatibility with your Python and other libraries, and current version
torch = ">=2.0,<3.0" # Or specify a more exact range based on your current setup.
tqdm = "^4.67.1"
pynvml = "^12.0.0"
utm = "^0.8.1"



[tool.poetry.group.dev.dependencies]
# Development Dependencies
pytest = "^8.0"
black = "^24.0"
flake8 = "*"
twine = "*"
tensorboard = "^2.19.0" # If used for development visualization
# Add any other dev tools like Sphinx for docs, Jupyter, etc.

# 7. Build System (Standard - do not modify unless you know what you're doing)
[build-system]
requires = ["poetry-core>=1.0.0"] # Poetry's build backend
build-backend = "poetry.core.masonry.api"

# Define your Command-Line Interface (CLI) Entry Points
# Format: "command-name-for-user" = "your_package_name.your_cli_module:your_cli_function"
[tool.poetry.scripts]
"multimodal-auv-data-prep" = "Multimodal_AUV.cli:data_preparation_cli"
"multimodal-auv-inference" = "Multimodal_AUV.cli:inference_cli"
"multimodal-auv-retrain" = "Multimodal_AUV.cli:retraining_cli"
"multimodal-auv-train-scratch" = "Multimodal_AUV.cli:training_from_scratch_cli"